--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to create configure.
 AC_INIT(ltmain.sh.in)
-AM_INIT_AUTOMAKE(libtool,1.0a)
+AM_INIT_AUTOMAKE(libtool,1.0b)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
