--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1,7 +1,6 @@
 #! /bin/sh
 
 # ltconfig - Create a system-specific libtool.
-# When updating this script, search for LINENO and fix line number refs.
 # @configure_input@
 # Copyright (C) 1996, 1997, Free Software Foundation, Inc.
 # Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
@@ -370,8 +369,7 @@ if test "$with_gcc" != yes || test -z "$CC"; then
   # Now see if the compiler is really GCC.
   with_gcc=no
   echo $ac_n "checking whether we are using GNU C... $ac_c" 1>&6
-  # LINENO
-  echo "$progname:374: checking whether we are using GNU C" >&5
+  echo "$progname:@LINENO@: checking whether we are using GNU C" >&5
 
   $rm conftest.c
   cat > conftest.c <<EOF
@@ -379,8 +377,7 @@ if test "$with_gcc" != yes || test -z "$CC"; then
   yes;
 #endif
 EOF
-  # LINENO
-  if { ac_try='${CC-cc} -E conftest.c'; { (eval echo $progname:383: \"$ac_try\") 1>&5; (eval $ac_try) 2>&5; }; } | egrep yes >/dev/null 2>&1; then
+  if { ac_try='${CC-cc} -E conftest.c'; { (eval echo $progname:@LINENO@: \"$ac_try\") 1>&5; (eval $ac_try) 2>&5; }; } | egrep yes >/dev/null 2>&1; then
     with_gcc=yes
   fi
   $rm conftest.c
@@ -482,9 +479,8 @@ if test -n "$pic_flag"; then
   echo > conftest.c
   save_CFLAGS="$CFLAGS"
   CFLAGS="$CFLAGS $pic_flag -DPIC"
-  # LINENO
-  echo "$progname:483: checking if $compiler PIC flag $pic_flag works" >&5
-  if { (eval echo $progname:484: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>conftest.err; } && test -s conftest.o; then
+  echo "$progname:@LINENO@: checking if $compiler PIC flag $pic_flag works" >&5
+  if { (eval echo $progname:@LINENO@: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>conftest.err; } && test -s conftest.o; then
     # Append any errors to the config.log.
     cat conftest.err 1>&5
 
@@ -526,9 +522,8 @@ $rm conftest*
 echo 'main(){return(0);}' > conftest.c
 save_LDFLAGS="$LDFLAGS"
 LDFLAGS="$LDFLAGS $link_static_flag"
-# LINENO
-echo "$progname:526: checking if $compiler static flag $link_static_flag works" >&5
-if { (eval echo $progname:527: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest; then
+echo "$progname:@LINENO@: checking if $compiler static flag $link_static_flag works" >&5
+if { (eval echo $progname:@LINENO@: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest; then
   echo $ac_t "$link_static_flag" 1>&6
 else
   echo $ac_t none 1>&6
@@ -554,50 +549,62 @@ if test -z "$LN_S"; then
   fi
 fi
 
-if test "$with_gnu_ld" != yes || test -z "$LD"; then
-  if test -z "$LD"; then
-    if test "$with_gnu_ld" = yes; then
-      echo $ac_n "checking for GNU ld... $ac_c" 1>&6
-    else
-      echo $ac_n "checking for non-GNU ld... $ac_c" 1>&6
-    fi
-
+# Make sure LD is an absolute path.
+case "$LD" in
+/*) ;;
+*)
+  ac_prog=ld
+  if test "$with_gcc" = yes; then
+    # Check if gcc -print-prog-name=ld gives a path.
+    echo $ac_n "checking for ld used by GCC... $ac_c" 1>&6
+    echo "$progname:@LINENO@: checking for ld used by GCC" >&5
+    ac_prog=`($CC -print-prog-name=ld) 2>&5`
+    case "$ac_prog" in
+    # Accept absolute paths.
+    /*) ;;
+    "")
+      # If it fails, then pretend we aren't using GCC.
+      ac_prog=ld
+      ;;
+    *)
+      # If it is relative, then search for the first ld in PATH.
+      with_gnu_ld=unknown
+      ;;
+    esac
+  elif test "$with_gnu_ld" = yes; then
+    echo $ac_n "checking for GNU ld... $ac_c" 1>&6
+    echo "$progname:@LINENO@: checking for GNU ld" >&5
+  else
+    echo $ac_n "checking for non-GNU ld""... $ac_c" 1>&6
+    echo "$progname:@LINENO@: checking for non-GNU ld" >&5
+  fi
+  LD=${LD-$ac_prog}
+  case "$LD" in
+  /*)
+    ac_cv_path_LD="$LD" # Let the user override the test with a path.
+    ;;
+  *)
     IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}:"
     for ac_dir in $PATH; do
       test -z "$ac_dir" && ac_dir=.
-      if test -f "$ac_dir/ld"; then
-	LD="$ac_dir/ld"
+      if test -f "$ac_dir/$ac_prog"; then
+	LD="$ac_dir/$ac_prog"
 	# Check to see if the program is GNU ld.  I'd rather use --version,
 	# but apparently some GNU ld's only accept -v.
 	# Break only if it was the GNU/non-GNU ld that we prefer.
 	if "$LD" -v 2>&1 < /dev/null | egrep '(GNU|with BFD)' > /dev/null; then
-	  test "$with_gnu_ld" = yes && break
+	  test "$with_gnu_ld" != no && break
 	else
 	  test "$with_gnu_ld" != yes && break
 	fi
       fi
     done
     IFS="$ac_save_ifs"
-
-    if test -n "$LD"; then
-      echo "$ac_t""$LD" 1>&6
-    else
-      echo "$ac_t""no" 1>&6
-    fi
-
-    if test -z "$LD"; then
-      echo "$progname: error: no acceptable ld found in \$PATH" 1>&2
-      exit 1
-    fi
-  fi
-
-  echo $ac_n "checking whether we are using GNU ld... $ac_c" 1>&6
-  # I'd rather use --version here, but apparently some GNU ld's only accept -v.
-  if $LD -v 2>&1 </dev/null | egrep '(GNU ld|with BFD)' > /dev/null; then
-    with_gnu_ld=yes
-  fi
+    ;;
+  esac
   echo $ac_t "$with_gnu_ld" 1>&6
-fi
+  ;;
+esac
 
 # See if the linker supports building shared libraries.
 echo $ac_n "checking whether the linker ($LD) supports shared libraries... $ac_c" 1>&6
@@ -811,12 +818,11 @@ void nm_test_func(){}
 main(){nm_test_var='a';nm_test_func();return(0);}
 EOF
 
-# LINENO
-echo "$progname:811: checking if global_symbol_pipe works" >&5
-if { (eval echo $progname:812: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>&5; } && test -s conftest.o; then
-  # Now try to grab the symbols. LINENO
+echo "$progname:@LINENO@: checking if global_symbol_pipe works" >&5
+if { (eval echo $progname:@LINENO@: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>&5; } && test -s conftest.o; then
+  # Now try to grab the symbols.
   nlist=conftest.nm
-  if { echo "$progname:815: eval \"$NM conftest.o | $global_symbol_pipe > $nlist\"" >&5; eval "$NM conftest.o | $global_symbol_pipe > $nlist 2>&5"; } && test -s "$nlist"; then
+  if { echo "$progname:@LINENO@: eval \"$NM conftest.o | $global_symbol_pipe > $nlist\"" >&5; eval "$NM conftest.o | $global_symbol_pipe > $nlist 2>&5"; } && test -s "$nlist"; then
 
     # Try sorting and uniquifying the output.
     if sort "$nlist" | uniq > "$nlist"T; then
@@ -864,8 +870,7 @@ EOF
 	save_CFLAGS="$CFLAGS"
         LIBS='conftestm.o'
 	CFLAGS="$CFLAGS$no_builtin_flag"
-        # LINENO
-        if { (eval echo $progname:864: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest; then
+        if { (eval echo $progname:@LINENO@: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest; then
           pipe_works=yes
         else
           echo "$progname: failed program was:" >&5
